--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-{%- extends "layout.html" %}
+{%- extends "component/layout.html" %}
 {%- block content %}
 <div class="container columns is-centered">
  <div class="field mt-5  column is-half">
@@ -11,6 +11,7 @@
    <div class="control">
     <input class="input" type="password" placeholder="Password input" name="password">
    </div>
+   <div class="small has-text-danger">{{message}}</div>
    <div class="control mt-5 has-text-centered">
     <button class="button is-link">ログイン</button>
    </div>
