--- a/templates/text_page.html
+++ b/templates/text_page.html
@@ -1,4 +1,4 @@
-{%- extends "layout.html" %}
+{%- extends "component/layout.html" %}
 {%- block content %}
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/tomorrow-night-blue.min.css">
@@ -14,6 +14,9 @@
         <a href="/text/{{text.id}}/edit" class="button">
           編集
         </a>
+        <button id="open-modal-button" class="js-modal-trigger is-danger button">
+          削除
+        </button>
       </p>
     </div>
     {% endif %}
@@ -43,4 +46,7 @@
     </script>
   </div>
 </div>
+{% with text_id = text.id %}
+{% include "component/delete_modal.html" %}
+{% endwith %}
 {%- endblock %}
