--- a/templates/top.html
+++ b/templates/top.html
@@ -1,4 +1,4 @@
-{%- extends "layout.html" %}
+{%- extends "component/layout.html" %}
 {%- block content %}
 <div class="columns">
  <div class="container is-centered column is-two-thirds">
