コース編集のform送信先を修正

--- a/web/templates/component/delete_modal.html
+++ b/web/templates/component/delete_modal.html
@@ -17,4 +17,4 @@
 
   <button class="modal-close is-large" aria-label="close" id="close-modal-button"></button>
 </div>
-<script type="text/javascript" src="{{ url_for('static', filename='main.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='modal.js') }}"></script>
