--- a/web/templates/user/create_user.html
+++ b/web/templates/user/create_user.html
@@ -11,8 +11,8 @@
     color: black;
   }
 </style>
-<div class="container columns is-centered">
-  <div class="field mt-5  column is-half">
+<div class="columns is-centered">
+  <div class="container field mt-5 column is-half">
     {% if type=="edit" %}
     <form action="/user/{{user.username}}/edit" method="post" enctype="multipart/form-data">
       {% else %}
