--- a/web/templates/user/edit_profile.html
+++ b/web/templates/user/edit_profile.html
@@ -11,8 +11,8 @@
     color: black;
   }
 </style>
-<div class="container columns is-centered">
-  <div class="field mt-5  column is-half">
+<div class="columns is-centered">
+  <div class="container field mt-5  column is-half">
     <form action="/profile/edit" method="post" enctype="multipart/form-data">
       <div class="control">
         <label class="label" for="username">ユーザー名</label>
@@ -74,6 +74,5 @@
 
     </form>
   </div>
-
 </div>
 {%- endblock %}
