--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -1,7 +1,7 @@
 {%- extends "component/layout.html" %}
 {%- block content %}
-<div class="container columns is-centered">
- <div class="field mt-5  column is-half">
+<div class="columns is-centered">
+ <div class="container field mt-5  column is-half">
   <form action="/login" method="post" enctype="multipart/form-data">
    <label class="label">ユーザー名</label>
    <div class="control">
