--- a/web/templates/user/reset_password.html
+++ b/web/templates/user/reset_password.html
@@ -11,8 +11,8 @@
     color: black;
   }
 </style>
-<div class="container columns is-centered">
-  <div class="field mt-5  column is-half">
+<div class="columns is-centered">
+  <div class="container field mt-5  column is-half">
     <form action="/user/{{user.username}}/reset" method="post" enctype="multipart/form-data">
       <div class="control">
         <label class="label" for="username">ユーザー名</label>
