order-idを正しく参照するよう修正

--- a/web/templates/text/create_text.html
+++ b/web/templates/text/create_text.html
@@ -13,7 +13,7 @@
         <div class="control">
           <label class="label" for="order-id">テキストNo</label>
           {% if type=="edit" %}
-          <input id="order-id" class="input" type="text" placeholder="order id" name="order-id" value="{{text.order-id}}">
+          <input id="order-id" class="input" type="text" placeholder="order id" name="order-id" value="{{text.order_id}}">
           {% else %}
           <input id="order-id" class="input" type="text" placeholder="order id" name="order-id">
           {% endif %}
